// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib/swagger/components.ts #getParameters should build body parameters 1`] = `
Array [
  Object {
    "in": "body",
    "name": "body",
    "required": true,
    "schema": Object {
      "properties": Object {
        "age": Object {
          "format": "int64",
          "type": "integer",
        },
        "email": Object {
          "maxLength": 250,
          "type": "string",
        },
        "firstName": Object {
          "maxLength": 100,
          "type": "string",
        },
        "isAdmin": Object {
          "type": "boolean",
        },
        "lastName": Object {
          "maxLength": 100,
          "type": "string",
        },
        "metadata": Object {
          "properties": Object {},
          "type": "object",
        },
        "password": Object {
          "maxLength": 32,
          "type": "string",
        },
        "tracking": Object {
          "properties": Object {
            "lastVisit": Object {
              "format": "date-time",
              "type": "string",
            },
          },
          "type": "object",
        },
      },
      "required": Array [
        "age",
        "isAdmin",
        "email",
        "password",
        "firstName",
        "lastName",
        "tracking",
      ],
      "type": "object",
    },
  },
]
`;

exports[`lib/swagger/components.ts #getParameters should build path parameters 1`] = `
Array [
  Object {
    "in": "params",
    "name": "id",
    "required": true,
    "type": "string",
  },
]
`;

exports[`lib/swagger/components.ts #getParameters should build query parameters 1`] = `
Array [
  Object {
    "in": "query",
    "name": "id[$eq]",
    "required": false,
    "type": "string",
  },
  Object {
    "in": "query",
    "name": "id[$ne]",
    "required": false,
    "type": "string",
  },
  Object {
    "in": "query",
    "name": "id[$match]",
    "required": false,
    "type": "string",
  },
  Object {
    "format": "int64",
    "in": "query",
    "name": "age[$eq]",
    "required": false,
    "type": "integer",
  },
  Object {
    "format": "int64",
    "in": "query",
    "name": "age[$ne]",
    "required": false,
    "type": "integer",
  },
  Object {
    "in": "query",
    "name": "isAdmin[$eq]",
    "required": false,
    "type": "boolean",
  },
  Object {
    "in": "query",
    "name": "isAdmin[$ne]",
    "required": false,
    "type": "boolean",
  },
  Object {
    "in": "query",
    "name": "email[$eq]",
    "required": false,
    "type": "string",
  },
  Object {
    "in": "query",
    "name": "email[$ne]",
    "required": false,
    "type": "string",
  },
  Object {
    "in": "query",
    "name": "email[$match]",
    "required": false,
    "type": "string",
  },
  Object {
    "in": "query",
    "name": "password[$eq]",
    "required": false,
    "type": "string",
  },
  Object {
    "in": "query",
    "name": "password[$ne]",
    "required": false,
    "type": "string",
  },
  Object {
    "in": "query",
    "name": "password[$match]",
    "required": false,
    "type": "string",
  },
  Object {
    "in": "query",
    "name": "firstName[$eq]",
    "required": false,
    "type": "string",
  },
  Object {
    "in": "query",
    "name": "firstName[$ne]",
    "required": false,
    "type": "string",
  },
  Object {
    "in": "query",
    "name": "firstName[$match]",
    "required": false,
    "type": "string",
  },
  Object {
    "in": "query",
    "name": "lastName[$eq]",
    "required": false,
    "type": "string",
  },
  Object {
    "in": "query",
    "name": "lastName[$ne]",
    "required": false,
    "type": "string",
  },
  Object {
    "in": "query",
    "name": "lastName[$match]",
    "required": false,
    "type": "string",
  },
  Object {
    "format": "date-time",
    "in": "query",
    "name": "createdAt[$eq]",
    "required": false,
    "type": "string",
  },
  Object {
    "format": "date-time",
    "in": "query",
    "name": "createdAt[$ne]",
    "required": false,
    "type": "string",
  },
  Object {
    "format": "date-time",
    "in": "query",
    "name": "updatedAt[$eq]",
    "required": false,
    "type": "string",
  },
  Object {
    "format": "date-time",
    "in": "query",
    "name": "updatedAt[$ne]",
    "required": false,
    "type": "string",
  },
]
`;

exports[`lib/swagger/components.ts #getSchema should build an array schema 1`] = `
Object {
  "items": Object {
    "properties": Object {
      "age": Object {
        "format": "int64",
        "type": "integer",
      },
      "createdAt": Object {
        "format": "date-time",
        "type": "string",
      },
      "email": Object {
        "maxLength": 250,
        "type": "string",
      },
      "firstName": Object {
        "maxLength": 100,
        "type": "string",
      },
      "id": Object {
        "type": "string",
      },
      "isAdmin": Object {
        "type": "boolean",
      },
      "lastName": Object {
        "maxLength": 100,
        "type": "string",
      },
      "metadata": Object {
        "properties": Object {},
        "type": "object",
      },
      "password": Object {
        "maxLength": 32,
        "type": "string",
      },
      "tracking": Object {
        "properties": Object {
          "lastVisit": Object {
            "format": "date-time",
            "type": "string",
          },
          "trackingId": Object {
            "type": "string",
          },
        },
        "required": Array [
          "trackingId",
        ],
        "type": "object",
      },
      "updatedAt": Object {
        "format": "date-time",
        "type": "string",
      },
    },
    "required": Array [
      "id",
      "age",
      "isAdmin",
      "email",
      "password",
      "firstName",
      "lastName",
      "tracking",
      "createdAt",
      "updatedAt",
    ],
    "type": "object",
  },
  "type": "array",
}
`;

exports[`lib/swagger/components.ts #getSchema should build an object schema 1`] = `
Object {
  "properties": Object {
    "age": Object {
      "format": "int64",
      "type": "integer",
    },
    "createdAt": Object {
      "format": "date-time",
      "type": "string",
    },
    "email": Object {
      "maxLength": 250,
      "type": "string",
    },
    "firstName": Object {
      "maxLength": 100,
      "type": "string",
    },
    "id": Object {
      "type": "string",
    },
    "isAdmin": Object {
      "type": "boolean",
    },
    "lastName": Object {
      "maxLength": 100,
      "type": "string",
    },
    "metadata": Object {
      "properties": Object {},
      "type": "object",
    },
    "password": Object {
      "maxLength": 32,
      "type": "string",
    },
    "tracking": Object {
      "properties": Object {
        "lastVisit": Object {
          "format": "date-time",
          "type": "string",
        },
        "trackingId": Object {
          "type": "string",
        },
      },
      "required": Array [
        "trackingId",
      ],
      "type": "object",
    },
    "updatedAt": Object {
      "format": "date-time",
      "type": "string",
    },
  },
  "required": Array [
    "id",
    "age",
    "isAdmin",
    "email",
    "password",
    "firstName",
    "lastName",
    "tracking",
    "createdAt",
    "updatedAt",
  ],
  "type": "object",
}
`;
